--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "catrix-platform",
   "private": true,
@@ -11,7 +12,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "@supabase/supabase-js": "^2.48.1"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
